test/org/midica/testfiles/failing/chord-without-param.midica
INCLUDE inc/instruments.midica
CHORD